fancysearch adding ctx length param

--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -77,6 +77,6 @@
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
     "diffEditor.maxComputationTime": 0,
-    "workbench.preferredDarkColorTheme": "Catppuccin Macchiato",
+    "workbench.preferredDarkColorTheme": "Monokai Pro",
     "workbench.preferredLightColorTheme": "Monokai Pro Light"
 }
