--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,7 +28,7 @@ bind x confirm-before -p "kill-pane #W? (y/n)" kill-pane
 
 # Basics #
 
-set-option -g default-shell /bin/zsh
+# set-option -g default-shell /bin/zsh
 
 # set-option -sg default-terminal "xterm-256color"
 set -g default-terminal "$TERM"
