Tmux copy mode, vim tmux copy plugin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,8 @@ set-option -g @ssh-split-h-key "|"
 set-option -g @ssh-split-v-key "_"
 set-option -g @ssh-split-w-key "="
 
+unbind-key [
+bind v copy-mode
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
